--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "vue-spoiler",
-  "version": "1.0.0",
+  "name": "v-spoiler",
+  "version": "1.0.1",
   "private": false,
+  "main": "dist/v-spoiler.umd.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --dest demo",
+    "build": "vue-cli-service build --dest v-spoiler",
     "build:lib": "vue-cli-service build --target lib --name v-spoiler src/components/Spoiler.vue",
     "lint": "vue-cli-service lint"
   },
@@ -15,6 +16,17 @@
   "peerDependencies": {
     "vue": "^3.0.0"
   },
+  "files": [
+    "dist/*",
+    "src/assets/logo.png"
+  ],
+  "keywords": [
+    "vue",
+    "spoiler",
+    "accordion",
+    "vue-accordion"
+  ],
+  "homepage": "https://github.com/bonilka/v-spoiler",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
